--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -6,6 +6,7 @@ body {
   max-width: 100vw;
   z-index: 0;
 }
+
 /* title */
 .nav {
   display: flex;
@@ -22,6 +23,7 @@ h1 {
   background: rgba(233, 57, 128, 255);
   margin-top: -1vh;
 }
+
 /* images */
 #melting-img {
   position: absolute;
@@ -39,6 +41,7 @@ h1 {
   bottom: 0vh;
   z-index: 2;
 }
+
 /* order container */
 h3 {
   font-family: "Tilt Neon";
@@ -78,6 +81,8 @@ h3 {
   justify-content: center;
   width: auto;
 }
+
+/* form containers */
 label {
   font-family: "Tilt Neon";
   font-size: 1.5rem;
