--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -16,12 +16,12 @@ body {
 }
 h1 {
   font-family: "Tilt Neon";
-  font-size: 8vw;
+  font-size: 6rem;
   font-weight: bold;
   color: rgb(247, 247, 20);
   text-shadow: 2px 2px 0 #bcbcbc, 4px 4px 0 #9c9c9c;
   background: rgba(233, 57, 128, 255);
-  margin-top: -1vh;
+  margin-top: -9vh;
 }
 
 /* images */
