--- a/Ice cream title style.css
+++ b/Ice cream title style.css
@@ -13,35 +13,35 @@ body {
 .nav {
     width: 50vw;
     display: flex;
-    justify-content: space-around;
-    margin-top: 5px;
+    justify-content: flex-end;
 }
 
 /* text */
 h1 {
     font-family: "Tilt Neon";
-    font-size: 6rem;
+    font-size: 5rem;
     font-weight: bold;
-    color: rgb(14, 14, 14);
+    color: black;
     text-shadow: 2px 2px 0 #bcbcbc;
 }
 
 h2 {
   font-family: "Tilt Neon";
-  font-size: 3rem;
+  font-size: 6rem;
   font-weight: bold;
   color: rgb(247, 247, 20);
   text-shadow: 2px 2px 0 #bcbcbc, 4px 4px 0 #9c9c9c;
   margin-top: -10px;
-  margin-left: 10px;
+  margin-left: 1vw;
 }
 h3 {
   font-family: "Tilt Neon";
   font-size: 1.5rem;
   font-weight: bold;
-  color: rgb(14, 14, 14);
+  color: #FF0066;
   text-shadow: 2px 2px 0 #bcbcbc;
-  margin-top: -10px;
+  margin-top: 1vh;
+  margin-right: 3vw;
 }
 
 /* body container */
@@ -57,8 +57,8 @@ grid-template-rows: auto;
   display: flex;
   flex-direction: column;
   z-index: 2;
-  margin-left: -190px;
-  margin-top: 100px;
+  margin-left: -50px;
+  margin-top: 250px;
 }
 
 /* background blob container */
@@ -79,8 +79,8 @@ grid-template-rows: auto;
     width: 40%;
     height: auto;
     z-index: 1;
-    left: 330px;
-    bottom: 100px;
+    left: 380px;
+    bottom: -20px;
 }
 svg {
   background: #ffecf2;
@@ -100,7 +100,7 @@ svg {
   font-family: "Tilt Neon";
   font-size: 4rem;
   font-weight: bold;
-  margin-left: 350px;
+  margin-left: 230px;
   outline: none;
   padding: 1rem 1.3rem;
   quotes: auto;
