--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -109,5 +109,40 @@ label {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  margin-top: 2vh;
+  margin-top: vh;
+}
+.order-button {
+  width: 60%;
+  appearance: none;
+  background-color: rgb(247, 247, 20);
+  border-radius: 40em;
+  border-style: none;
+  box-shadow: rgb(192, 192, 16) 0 -12px 6px inset;
+  box-sizing: border-box;
+  color: #000000;
+  cursor: pointer;
+  display: inline-block;
+  font-family: "Tilt Neon";
+  font-size: 1rem;
+  padding: 0.5rem 0 1rem 0;
+  font-weight: bold;
+  outline: none;
+  quotes: auto;
+  text-decoration: none;
+  justify-content: center;
+  transition: all 0.15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  
+}
+
+.order-button:hover {
+  background-color: rgb(140, 223, 222);
+  box-shadow: rgb(83, 134, 133) 0 -6px 8px inset;
+  transform: scale(1.125);
+}
+
+.order-button:active {
+  transform: scale(1.025);
 }
