--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -47,6 +47,7 @@ h3 {
   margin: 1vh 1vw 3vh 1vw;
   color: rgb(247, 247, 20);
   text-shadow: 2px 2px 0 #bcbcbc, 4px 4px 0 #9c9c9c;
+  z-index: 2;
 }
 .container {
   position: relative;
