--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -110,7 +110,9 @@ label {
   flex-direction: row;
   justify-content: space-evenly;
 }
-
+#input {
+  display: none;
+}
 .basket-output {
   height: 40vh;
   width: auto;
@@ -156,9 +158,7 @@ label {
 
 /* tablet size*/
 @media (max-width: 1300px) {
-  .container {
-    background: red;
-  }
+
   h1 {
     font-size: 90px;
   }
@@ -174,9 +174,8 @@ label {
 }
 
 /* phone size*/
-@media (max-width: 768px )  {
+@media (max-width: 800px )  {
   .container {
-    background: violet;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
