--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -110,7 +110,7 @@ label {
   flex-direction: row;
   justify-content: space-evenly;
 }
-#input {
+.quantity {
   display: none;
 }
 .basket-output {
