--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -89,15 +89,10 @@ label {
   font-family: "Tilt Neon";
   font-size: 1.5vw;
   padding-bottom: 10px;
-}
-
-#choice-cont {
-  display: flex;
-  align-items: space-between;
-  justify-content: center;
   color: rgba(255, 250, 251, 255);
   text-shadow: 1px 1px 1px black;
 }
+
 
 .scoops-cont,
 .bowl-cone-list {
@@ -113,12 +108,13 @@ label {
 .quantity {
   display: none;
 }
+
 .basket-output {
   height: 40vh;
   width: auto;
   border: black 2px solid;
 }
-.orderbtn {
+.orderbtn { 
   width: 70%;
   appearance: none;
   background-color: rgb(247, 247, 20);
@@ -126,7 +122,7 @@ label {
   border-style: none;
   box-shadow: rgb(192, 192, 16) 0 -12px 6px inset;
   box-sizing: border-box;
-  color: #000000;
+  color: black;
   cursor: pointer;
   display: inline-block;
   font-family: "Tilt Neon";
@@ -200,7 +196,11 @@ h1 {
     display: none;
   }
 
-#choice-cont {
+#sizesCont,
+#bowlConeCont,
+#flavorsCont,
+#toppingsCont,
+#basketCont {
   display: none;
 }
 
