--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -96,6 +96,10 @@ label, p
   color: rgba(255, 250, 251, 255);
   text-shadow: 1px 1px 1px black;
 }
+p {
+  margin-bottom: -20px;
+  margin-left: 1vw;
+}
 .scoops-list {
   margin-left: -2vw;
 }
@@ -118,7 +122,7 @@ label, p
   height: 40vh;
   width: auto;
   font-family: "Tilt Neon";
-  font-size: 1.5vw;
+  font-size: 1vw;
   padding-bottom: 10px;
   color: rgba(255, 250, 251, 255);
   text-shadow: 1px 1px 1px black;
@@ -202,7 +206,8 @@ label, p
   h3 {
     font-size: 4rem;
   }
-  label {
+  label,
+  p {
     font-size: 2rem;
   }
   #sizes-box,
