--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -74,7 +74,9 @@ h3 {
   background: rgb(140, 223, 222);
   z-index: 1;
   margin: 0 1vw 0 1vw;
-  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px 0px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px 0px inset;
+  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px 0px,
+    rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
+    rgba(0, 0, 0, 0.2) 0px -3px 0px 0px inset;
 }
 #flavors-box,
 #basket-box {
@@ -88,8 +90,8 @@ h3 {
   width: auto;
 }
 /* form containers */
-label, p
-{
+label,
+p {
   font-family: "Tilt Neon";
   font-size: 1.5vw;
   padding-bottom: 10px;
@@ -100,10 +102,10 @@ p {
   margin-bottom: -20px;
   margin-left: 1vw;
 }
-.scoops-list {
+.scoopsList {
   margin-left: -2vw;
 }
-.bowl-cone-list {
+.bowlConeList {
   margin-left: 2vw;
   z-index: 3;
 }
@@ -129,6 +131,9 @@ p {
 #delete {
   height: 2.5vh;
   margin-right: 20px;
+}
+.total {
+  margin-left: 10vw;
 }
 .orderbtn-cont {
   position: relative;
@@ -177,7 +182,6 @@ p {
   transform: scale(1.025);
 }
 
-
 /* media queries*/
 
 /* tablet size*/
@@ -221,6 +225,7 @@ p {
     width: 100vw;
     height: auto;
   }
+
   .orderbtn,
   .resetbtn {
     margin-bottom: 10px;
@@ -241,5 +246,4 @@ p {
     display: none;
     padding-bottom: 30px;
   }
-
 }
