--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -130,9 +130,12 @@ p {
 }
 .delete {
   height: 2.5vh;
-  margin-right: 20px;
+  margin-left: 1vw;
+  margin-right: 1vw;
 }
-.total {
+
+.total,
+.bowlConeOutput {
   margin-left: 2vw;
 }
 .orderbtn-cont {
