--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -5,7 +5,7 @@ body {
   height: 100vh;
   max-width: 100vw;
   z-index: 0;
-  user-select: none; /* <--- this removes blinking line that appears after clicking on text */
+  user-select: none; /* <--- this hides blinking line that appears after clicking on text */
 }
 /* title */
 .nav {
