--- a/Ice cream style.css
+++ b/Ice cream style.css
@@ -116,6 +116,11 @@ p {
   justify-content: space-evenly;
 }
 
+input[type=checkbox] {
+  height: 1.8vh;
+  width: 2vw;
+  accent-color: #ffecf2;
+}
 .quantity {
   display: none;
 }
